src/com/alchitry/labs/parsers/lucidv2/grammar/LucidParser.java
// Generated from Lucid.g4 by ANTLR 4.9.3

package com.alchitry.labs.parsers.lucidv2.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LucidParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
			T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
			T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
			T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
			T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
			T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
			HEX = 53, BIN = 54, DEC = 55, REAL = 56, INT = 57, STRING = 58, SEMICOLON = 59, NL = 60,
			SIGNED = 61, TYPE_ID = 62, CONST_ID = 63, SPACE_ID = 64, FUNCTION_ID = 65, BLOCK_COMMENT = 66,
			COMMENT = 67, WS = 68;
	public static final int
			RULE_source = 0, RULE_global = 1, RULE_global_stat = 2, RULE_module = 3,
			RULE_param_list = 4, RULE_port_list = 5, RULE_param_dec = 6, RULE_port_dec = 7,
			RULE_input_dec = 8, RULE_output_dec = 9, RULE_inout_dec = 10, RULE_param_name = 11,
			RULE_param_constraint = 12, RULE_array_size = 13, RULE_struct_type = 14,
			RULE_struct_member_const = 15, RULE_struct_const = 16, RULE_module_body = 17,
			RULE_stat = 18, RULE_const_dec = 19, RULE_assign_block = 20, RULE_sig_con = 21,
			RULE_param_con = 22, RULE_type_dec = 23, RULE_dff_single = 24, RULE_sig_dec = 25,
			RULE_dff_dec = 26, RULE_fsm_dec = 27, RULE_fsm_states = 28, RULE_module_inst = 29,
			RULE_inst_cons = 30, RULE_con_list = 31, RULE_connection = 32, RULE_struct_member = 33,
			RULE_struct_dec = 34, RULE_always_block = 35, RULE_always_stat = 36, RULE_block = 37,
			RULE_assign_stat = 38, RULE_array_index = 39, RULE_bit_selector = 40,
			RULE_bit_selection = 41, RULE_signal = 42, RULE_case_stat = 43, RULE_case_elem = 44,
			RULE_if_stat = 45, RULE_else_stat = 46, RULE_repeat_stat = 47, RULE_function = 48,
			RULE_number = 49, RULE_expr = 50, RULE_name = 51, RULE_semi = 52;

	private static String[] makeRuleNames() {
		return new String[]{
				"source", "global", "global_stat", "module", "param_list", "port_list",
				"param_dec", "port_dec", "input_dec", "output_dec", "inout_dec", "param_name",
				"param_constraint", "array_size", "struct_type", "struct_member_const",
				"struct_const", "module_body", "stat", "const_dec", "assign_block", "sig_con",
				"param_con", "type_dec", "dff_single", "sig_dec", "dff_dec", "fsm_dec",
				"fsm_states", "module_inst", "inst_cons", "con_list", "connection", "struct_member",
				"struct_dec", "always_block", "always_stat", "block", "assign_stat",
				"array_index", "bit_selector", "bit_selection", "signal", "case_stat",
				"case_elem", "if_stat", "else_stat", "repeat_stat", "function", "number",
				"expr", "name", "semi"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, "'global'", "'{'", "'}'", "'module'", "'#('", "','", "')'", "'('",
				"':'", "'input'", "'output'", "'inout'", "'='", "'['", "']'", "'<'",
				"'.'", "'>'", "'const'", "'#'", "'sig'", "'dff'", "'fsm'", "'struct'",
				"'always'", "'+'", "'-'", "'case'", "'default'", "'if'", "'else'", "'repeat'",
				"'c{'", "'x{'", "'~'", "'!'", "'*'", "'/'", "'>>'", "'<<'", "'<<<'",
				"'>>>'", "'|'", "'&'", "'^'", "'=='", "'!='", "'>='", "'<='", "'||'",
				"'&&'", "'?'", null, null, null, null, null, null, "';'", null, "'signed'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[]{
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, "HEX", "BIN", "DEC", "REAL", "INT", "STRING",
				"SEMICOLON", "NL", "SIGNED", "TYPE_ID", "CONST_ID", "SPACE_ID", "FUNCTION_ID",
				"BLOCK_COMMENT", "COMMENT", "WS"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "Lucid.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public LucidParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(LucidParser.EOF, 0);
		}

		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}

		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class, i);
		}

		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}

		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class, i);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_source;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterSource(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << NL))) != 0)) {
					{
						setState(109);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case T__0: {
								setState(106);
								global();
							}
							break;
							case T__3: {
								setState(107);
								module();
							}
							break;
							case NL: {
								setState(108);
								match(NL);
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(114);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class, 0);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public List<Global_statContext> global_stat() {
			return getRuleContexts(Global_statContext.class);
		}

		public Global_statContext global_stat(int i) {
			return getRuleContext(Global_statContext.class, i);
		}

		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_global;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterGlobal(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitGlobal(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(116);
				match(T__0);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(117);
							match(NL);
						}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				name();
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(124);
							match(NL);
						}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				match(T__1);
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(131);
								match(NL);
							}
						}
					}
					setState(136);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__18 || _la == T__23) {
					{
						{
							setState(137);
							global_stat();
						}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(143);
							match(NL);
						}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(149);
				match(T__2);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_statContext extends ParserRuleContext {
		public Struct_decContext struct_dec() {
			return getRuleContext(Struct_decContext.class, 0);
		}

		public Const_decContext const_dec() {
			return getRuleContext(Const_decContext.class, 0);
		}

		public Global_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_global_stat;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterGlobal_stat(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitGlobal_stat(this);
		}
	}

	public final Global_statContext global_stat() throws RecognitionException {
		Global_statContext _localctx = new Global_statContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_global_stat);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case T__23:
					enterOuterAlt(_localctx, 1);
				{
					setState(151);
					struct_dec();
				}
				break;
				case T__18:
					enterOuterAlt(_localctx, 2);
				{
					setState(152);
					const_dec();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class, 0);
		}

		public Port_listContext port_list() {
			return getRuleContext(Port_listContext.class, 0);
		}

		public Module_bodyContext module_body() {
			return getRuleContext(Module_bodyContext.class, 0);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class, 0);
		}

		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_module;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterModule(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(155);
				match(T__3);
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(156);
							match(NL);
						}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(162);
				name();
				setState(166);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(163);
								match(NL);
							}
						}
					}
					setState(168);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__4) {
					{
						setState(169);
						param_list();
					}
				}

				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(172);
							match(NL);
						}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(178);
				port_list();
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(179);
							match(NL);
						}
					}
					setState(184);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(185);
				module_body();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listContext extends ParserRuleContext {
		public List<Param_decContext> param_dec() {
			return getRuleContexts(Param_decContext.class);
		}

		public Param_decContext param_dec(int i) {
			return getRuleContext(Param_decContext.class, i);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_param_list;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterParam_list(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitParam_list(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(187);
				match(T__4);
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(188);
							match(NL);
						}
					}
					setState(193);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(194);
				param_dec();
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(195);
							match(NL);
						}
					}
					setState(200);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__5) {
					{
						{
							setState(201);
							match(T__5);
							setState(205);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la == NL) {
								{
									{
										setState(202);
										match(NL);
									}
								}
								setState(207);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							setState(208);
							param_dec();
							setState(212);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la == NL) {
								{
									{
										setState(209);
										match(NL);
									}
								}
								setState(214);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
						}
					}
					setState(219);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(220);
				match(T__6);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_listContext extends ParserRuleContext {
		public List<Port_decContext> port_dec() {
			return getRuleContexts(Port_decContext.class);
		}

		public Port_decContext port_dec(int i) {
			return getRuleContext(Port_decContext.class, i);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public Port_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_port_list;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterPort_list(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitPort_list(this);
		}
	}

	public final Port_listContext port_list() throws RecognitionException {
		Port_listContext _localctx = new Port_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_port_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(222);
				match(T__7);
				setState(226);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 18, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(223);
								match(NL);
							}
						}
					}
					setState(228);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 18, _ctx);
				}
				setState(229);
				port_dec();
				setState(233);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(230);
							match(NL);
						}
					}
					setState(235);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(252);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__5) {
					{
						{
							setState(236);
							match(T__5);
							setState(240);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input, 20, _ctx);
							while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
								if (_alt == 1) {
									{
										{
											setState(237);
											match(NL);
										}
									}
								}
								setState(242);
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input, 20, _ctx);
							}
							setState(243);
							port_dec();
							setState(247);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la == NL) {
								{
									{
										setState(244);
										match(NL);
									}
								}
								setState(249);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
						}
					}
					setState(254);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(255);
				match(T__6);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_decContext extends ParserRuleContext {
		public Param_nameContext param_name() {
			return getRuleContext(Param_nameContext.class, 0);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public Param_constraintContext param_constraint() {
			return getRuleContext(Param_constraintContext.class, 0);
		}

		public Param_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_param_dec;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterParam_dec(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitParam_dec(this);
		}
	}

	public final Param_decContext param_dec() throws RecognitionException {
		Param_decContext _localctx = new Param_decContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param_dec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(257);
				param_name();
				setState(261);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(258);
								match(NL);
							}
						}
					}
					setState(263);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
				}
				setState(272);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__8) {
					{
						setState(264);
						match(T__8);
						setState(268);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == NL) {
							{
								{
									setState(265);
									match(NL);
								}
							}
							setState(270);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(271);
						param_constraint();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_decContext extends ParserRuleContext {
		public Input_decContext input_dec() {
			return getRuleContext(Input_decContext.class, 0);
		}

		public Output_decContext output_dec() {
			return getRuleContext(Output_decContext.class, 0);
		}

		public Inout_decContext inout_dec() {
			return getRuleContext(Inout_decContext.class, 0);
		}

		public Port_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_port_dec;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterPort_dec(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitPort_dec(this);
		}
	}

	public final Port_decContext port_dec() throws RecognitionException {
		Port_decContext _localctx = new Port_decContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_port_dec);
		try {
			setState(277);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 26, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(274);
					input_dec();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(275);
					output_dec();
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(276);
					inout_dec();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_decContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class, 0);
		}

		public TerminalNode SIGNED() {
			return getToken(LucidParser.SIGNED, 0);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public Struct_typeContext struct_type() {
			return getRuleContext(Struct_typeContext.class, 0);
		}
